# doubak

./: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  compile_protos.sh  deps.bzl  doubak.go  doubak_test.go  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
collector/: BUILD.bazel  collector.go
proto/: BUILD.bazel  category.pb.go  category.proto  flag.pb.go  flag.proto  task.pb.go  task.proto  util.go
task/: BUILD.bazel  collector.go  parser.go  publisher.go  task.go
util/: BUILD.bazel  crawlers.go  files.go  strings.go
