load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/its-my-data/doubak
gazelle(name = "gazelle")

go_library(
    name = "doubak_lib",
    srcs = ["doubak.go"],
    importpath = "github.com/its-my-data/doubak",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gocolly_colly_v2//:colly"],
)

go_binary(
    name = "doubak",
    embed = [":doubak_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "doubak_test",
    srcs = ["doubak_test.go"],
    embed = [":doubak_lib"],
)
