load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "task",
    srcs = [
        "collector.go",
        "parser.go",
        "publisher.go",
        "task.go",
    ],
    importpath = "github.com/its-my-data/doubak/task",
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "//util",
        "@com_github_gocolly_colly_v2//:colly",
        "@com_github_gocolly_colly_v2//queue",
    ],
)
